# AllTest

./: README.md
FastLZ/: CMakeLists.txt  build.bat
FastLZ/source/: main.cpp
HTML/: 主页面.html  再别康桥.html
LZ77/: LZ77.py
LZ77/examples/compressed/: input.txt
LZ77/src/: LZ77.py  test_LZ77.py
TimeCost/: CMakeLists.txt
align/: CMakeLists.txt
align/include/: align.h
align/source/: main.cpp
inline/: CMakeLists.txt  build.bat
inline/source/: main.cpp
testcode/: Calculate.c  CharacterNumber.c  DataClassification.c  MergeRecord.c  NumberBackward.c  PasswordCheck.c  SentenceBackward.c  StringBackward.c  Substring.c  password.c  prime.c  readme.md  sentence.c  string.c
testcode/project/: main.c
testcode/project/test/: test.vcxproj
testcode/project/test/Debug/: vc142.idb
testcode/project/test/Debug/test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test.lastbuildstate
typelint/: CMakeLists.txt  build64.bat  readme.txt
typelint/include/: arch.h  sizelint.h
typelint/source/: main.cpp
